--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet"> 
+    <!-- pdfs -->
+    <link rel="pdf" href="<%= BASE_URL %>/pdfs/BachmairMobilesLernen8August14.pdf">
+    <link rel="pdf" href="<%= BASE_URL %>/pdfs/Bachmair-Scenarios Augsburg 2015 awareness+context.pdf">
+
     <title>Ben Bachmair</title>
   </head>
   <body class="body">
